--- a/index.html
+++ b/index.html
@@ -7,7 +7,25 @@
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
+
     <h3 id="download">Download Excursion (Coming soon)</h3>
 
+    <video autoplay muted loop>
+       <source src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/videos/excursion.mp4" type= "video/mp4">
+    </video>
+
+    <h2>Your personal travel guide</h2>
+
+    <p id="paraone">Excursion remembers places you like, and recommends new points of interest around you.</p>
+
+    <p><img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg" alt="Camping in tents"></p>
+
+    <p><img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" alt="phone image"></P>
+
+    <h3 id="download">Download Excursion (Coming soon)</h3>
+
+   <div class="footer">
+     <p>© Excursion</p>
+   </div>
   </body>
 </html>
